--- a/.github/workflows/app-scan.yml
+++ b/.github/workflows/app-scan.yml
@@ -16,9 +16,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build src//Altinn.Apps/AppTemplates/AspNet/ --file  src/Altinn.Apps/AppTemplates/AspNet/Dockerfile --tag AltinnApps:${{github.sha}}
+      run: docker build src/Altinn.Apps/AppTemplates/AspNet/ --file  src/Altinn.Apps/AppTemplates/AspNet/Dockerfile --tag altinn-apps:${{github.sha}}
       
     - uses: Azure/container-scan@v0
       with:
-        image-name: AltinnApps:${{ github.sha }}
+        image-name: altinn-apps:${{ github.sha }}
     
