--- a/.github/workflows/pdf-scan.yml
+++ b/.github/workflows/pdf-scan.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ master ]
     paths:
-      - 'src/Altinn.Platform/Altinn.Platform.Authentication/**'
+      - 'src/Altinn.Platform/Altinn.Platform.PDF/**'
   pull_request:
     branches: [ master ]
     paths:
-      - 'src/Altinn.Platform/Altinn.Platform.Authentication/**'
+      - 'src/Altinn.Platform/Altinn.Platform.PDF/**'
 
 jobs:
   build:
